--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    meta name="author" content="Augusto Brito">
+    <meta name="author" content="Augusto Brito">
     <meta name="description" content="trabajo practico sobre js" />
     <meta
       name="keywords"
@@ -12,6 +12,6 @@
     <title>Trabajo Práctico Arrays</title>
   </head>
   <body>
-    
+    <script src="./js/01-ejercicio.js"></script>
   </body>
 </html>
