se agrego 03-ejercicio.js

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       name="keywords"
       content="arrays, variables, bucles, javascript, desarrollo web, lenguaje de programacion"
     />
+    <link rel="stylesheet" href="./style.css">
     <title>Trabajo Práctico Arrays</title>
   </head>
   <body>
-      <script src="./js/02-ejercicio.js"></script> 
+      <script src="./js/03-ejercicio.js"></script> 
   </body>
 </html>
