se corrigieron errores

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <title>Trabajo Práctico Arrays</title>
   </head>
   <body>
-      <script src="./js/07-ejercicio.js"></script> 
+      <!-- <script src="./js/07-ejercicio.js"></script>  -->
   </body>
 </html>
