se corrigieron algunos errores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="keywords"
       content="arrays, variables, bucles, javascript, desarrollo web, lenguaje de programacion"
     />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Trabajo Práctico Arrays</title>
   </head>
   <body>
